fixed: avoid left/right space on narrow screens

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -103,29 +103,36 @@
 }
 
 
-.container {
+.main-container {
   padding: 0.5em 0em 0.5em 0em;
 }
 
 
 
+@media screen and (max-width: 639px) {
+  .autodraw, .textholder-keeper {
+    right: 0%;        /* to keep absolute positioned same width */
+    left: 0%;
+  }
+  /* ugly copypaste ^^^ of non-absolute div */
+  .textholder-keeper {
+    margin-right: 0%;
+    margin-left: 0%;
+  }
 
-
-/* .container div { */
-/*   right: 20%;        /\* to keep absolute positioned same width *\/ */
-/*   left: 20%; */
-/* } */
-
-.autodraw, .textholder-keeper {
-  right: 20%;        /* to keep absolute positioned same width */
-  left: 20%;
 }
-/* ugly copypaste ^^^ of non-absolute div */
-.textholder-keeper {
-  margin-right: 20%;
-  margin-left: 20%;
-}
+@media screen and (min-width: 640px) {
+  .autodraw, .textholder-keeper {
+    right: 20%;        /* to keep absolute positioned same width */
+    left: 20%;
+  }
+  /* ugly copypaste ^^^ of non-absolute div */
+  .textholder-keeper {
+    margin-right: 20%;
+    margin-left: 20%;
+  }
 
+}
 
 
 
